# trading_knowledge_base

./: .gitignore  Dockerfile  README.md  arxiv_faiss.index  arxiv_id_mapping.json  arxiv_qfin_index.json  basic_analyser.py  crawler.py  demo_crew_working.py  docker-compose.yml  env.template  extract_and_index.py  helpers.py  json_to_faiss  pyproject.toml  requirements.txt  scraper.py  test_crew_integration.py
config/: system.yaml
data/: arxiv_qfin_index.json  research_error_20250812_223623.json
examples/: basic_usage.py
fin_research_project/: README.md  pyproject.toml
fin_research_project/src/fin_research_project/: crew.py  main.py  quantitative_research_crew.py
fin_research_project/src/fin_research_project/memory/: LTM.py  STM.py
fin_research_project/src/fin_research_project/tools/: __init__.py  arxiv_retrieval_tool.py  critic_tool.py  query_answering_tool.py  vector_search_tool.py
src/: __init__.py  core.py  main.py
src/config/: agents.yaml  tasks.yaml
src/memory/: __init__.py  ltm.py
src/tools/: __init__.py  arxiv_retrieval_tool.py  critic_tool.py  output_generation_tool.py  summarization_tool.py  vector_search_tool.py
tests/: test_core.py
